# transformers_scratch

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  train.py
dev/: test.py
src/transformers_scratch/: Attention.py  Bleu.py  Dataset.py  Decoder.py  Embedding.py  Encoder.py  FeedForwardNetwork.py  Norm.py  PositionalEncoding.py  Token.py  Training.py  Transformer.py  __init__.py
test/: Token.ipynb
