[project]
name = "transformers-scratch"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yukihito", email = "ok220020@oks.iput.ac.jp" }
]
dependencies = [
    "ipykernel>=6.29.5",
    "torch==2.4.1+cu121",
    "torchvision==0.19.1+cu121",
    "torchaudio==2.4.1+cu121",
    "mypy>=1.11.2",
    "numpy>=1.26.3",
    "tqdm>=4.64.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/transformers_scratch"]

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
type = "index"
